--- a/api_implementation/src/main/res/values-pl/api_string.xml
+++ b/api_implementation/src/main/res/values-pl/api_string.xml
@@ -42,6 +42,8 @@ Czy chcesz usunąć obecne urządzenie podstawowe i ustawić bieżące jako nowe
     <string name="api_no_phone_number">Nie wpisano numeru telefonu</string>
     <string name="api_login_error">Wystąpił problem podczas logowania, podano zły login lub hasło.</string>
     <string name="api_activate_summary">Zaloguj się aby mieć wszystkie swoje wiadomości na tym urządzeniu!</string>
+    <string name="api_activate_1">1</string>
+    <string name="api_activate_2">2</string>
     <string name="api_activate_1_1">Przejdź do</string>
     <string name="api_activate_1_2">tv.klinkerapps.com</string>
     <string name="api_activate_1_3">na urządzeniu przenośnym bądź komputerze.</string>
