--- a/wear/src/main/res/layout/activity_activate.xml
+++ b/wear/src/main/res/layout/activity_activate.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="xyz.klinker.messenger.MessengerActivity"
+    android:layout_height="match_parent" tools:context="xyz.klinker.messenger.activity.MessengerWearActivity"
     tools:deviceIds="wear_round">
 
     <FrameLayout
