--- a/api_implementation/src/main/res/values/api_string.xml
+++ b/api_implementation/src/main/res/values/api_string.xml
@@ -50,6 +50,7 @@
     <string name="api_activate_2">2</string>
     <string name="api_activate_1_1">Head to</string>
     <string name="api_activate_1_2">tv.klinkerapps.com</string>
+    <string name="api_activity_1_21">wear.klinkerapps.com</string>
     <string name="api_activate_1_3">on a mobile device or computer.</string>
     <string name="api_activate_1_4">on a computer.</string>
     <string name="api_activate_2_1">On the website</string>
