--- a/shared/src/main/res/xml/settings_mms.xml
+++ b/shared/src/main/res/xml/settings_mms.xml
@@ -6,7 +6,7 @@
         android:title="@string/max_mms_size"
         android:entries="@array/mms_size"
         android:entryValues="@array/mms_size_values"
-        android:defaultValue="1_mb"/>
+        android:defaultValue="500_kb"/>
 
     <SwitchPreference
         android:key="@string/pref_group_mms"
