ignore the 'sending...' status on devices other than the primary.
It didn't seem to update all that well, couldn't figure out why, they will still get marked as error, etc.

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -19,6 +19,7 @@
     <version
         name="2.0.1"
         description="February 12th, 2017">
+        <text>Improvements to sync reliability</text>
         <text>Fix for double click sounds when exiting a conversation</text>
         <text>Fix for delayed sending not always clearing the message text</text>
         <text>Some MMS tweaks</text>
