--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -21,6 +21,7 @@
         description="February 28th, 2017">
         <text>Option to customize which buttons appear on a notification</text>
         <text>Option to disable heads up on notifications (Global Settings -> Alert Types)</text>
+        <text>Option to pick the location to save media to (Global Settings -> MMS Configuration)</text>
     </version>-->
 
     <version
