update dependencies and ensure only there aren't any duplicates when receiving an MMS

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -23,6 +23,7 @@
         <text>Option to disable heads up on notifications (Global Settings -> Alert Types)</text>
         <text>Option to pick the location to save media to (Global Settings -> MMS Configuration)</text>
         <text>Fixes for the "Strip Unicode" setting</text>
+        <text>Fixes for conversations having duplicate recipients</text>
     </version>-->
 
     <version
