--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -19,6 +19,12 @@
     <version
         name="2.1.0"
         description="March 7th, 2017">
+        <text>New notification icon</text>
+    </version>
+    
+    <version
+        name="2.1.0"
+        description="March 7th, 2017">
         <text>Option to customize which buttons appear on a notification</text>
         <text>Option to disable heads up on notifications (Global Settings -> Alert Types)</text>
         <text>Option to pick the location to save media to (Global Settings -> MMS Configuration)</text>
