fuck that. The reason devices got dis-associated with the accounts so often, was because the firebase instance id refresh service was not an intent service, so it was running on the main thread and the okhttp call silently failed every time.
This also adds a preference in the 'my account' section to manually refresh it

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -21,6 +21,7 @@
         description="March 13th, 2017">
         <text>New notification icon</text>
         <text>Fixes for recurring notifications</text>
+        <text>Fix devices getting dis-associated with an account</text>
     </version>
 
     <version
