--- a/shared/src/main/res/xml/my_account.xml
+++ b/shared/src/main/res/xml/my_account.xml
@@ -32,6 +32,11 @@
         android:title="@string/device_id" />
 
     <Preference
+        android:key="@string/pref_refresh_firebase"
+        android:title="@string/refresh_firebase"
+        android:summary="@string/refresh_firebase_summary" />
+
+    <Preference
         android:key="@string/pref_resync_account"
         android:title="@string/resync_account"
         android:summary="@string/resync_account_summary"/>
