Update with all the new web features

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,17 @@
 <changelog>
 
     <version
+        name="2.1.2"
+        description="March 18th, 2017">
+        <text>Tons of support for web updates:</text>
+        <text>WEB: compose new group messages</text>
+        <text>WEB: manage contacts from the "My Account" section</text>
+        <text>WEB: manage drafts from the "My Account" section</text>
+        <text>WEB: improve scaling of the message list when entering a lot of text</text>
+        <text>WEB: remove duplicate contacts when composing a message</text>
+    </version>
+  
+    <version
         name="2.1.1"
         description="March 13th, 2017">
         <text>New notification icon</text>
