handle the remove_contacts_by_id firebase message

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -19,7 +19,7 @@
     <version
         name="2.1.2"
         description="March 18th, 2017">
-        <text>Tons of support for web updates:</text>
+        <text>Tons of support for new web updates:</text>
         <text>WEB: compose new group messages</text>
         <text>WEB: manage contacts from the "My Account" section</text>
         <text>WEB: manage drafts from the "My Account" section</text>
