--- a/shared/src/main/res/values/arrays.xml
+++ b/shared/src/main/res/values/arrays.xml
@@ -225,5 +225,20 @@
         <item>read</item>
     </string-array>
 
+    <string-array name="convert_to_mms">
+        <item>@string/repeat_never</item>
+        <item>@string/after_one_message</item>
+        <item>@string/after_two_messages</item>
+        <item>@string/after_three_messages</item>
+        <item>@string/after_four_messages</item>
+    </string-array>
+
+    <string-array name="convert_to_mms_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
 
 </resources>
