--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,8 +17,9 @@
 <changelog>
 
     <version
-        name="2.1.3"
+        name="2.2.0"
         description="March 26th, 2017">
+        <text>Option to pick how many messages before an SMS should be converted to an MMS message</text>
         <text>Improvements to deleting from the notification</text>
         <text>Bug fixes</text>
         <text>Translation updates</text>
