apply the image letters on the notification reply. And make the edit text on the notification reply, respect the keyboard type setting

--- a/shared/src/main/res/layout/activity_notification_reply.xml
+++ b/shared/src/main/res/layout/activity_notification_reply.xml
@@ -103,7 +103,7 @@
                     android:paddingTop="16dp"
                     android:paddingBottom="16dp"
                     android:hint="@null"
-                    android:inputType="textCapSentences|textAutoCorrect|textMultiLine|textShortMessage"
+                    android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
                     android:imeOptions="actionSend|flagNoExtractUi"
                     android:background="@null"/>
 
