--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -20,6 +20,8 @@
         name="2.2.0"
         description="March 26th, 2017">
         <text>Option to pick how many messages before an SMS should be converted to an MMS message</text>
+        <text>Improvements to launcher shortcuts</text>
+        <text>Improvements to the quick reply for Lollipop and Marshmallow devices</text>
         <text>Improvements to deleting from the notification</text>
         <text>Bug fixes</text>
         <text>Translation updates</text>
