--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -20,6 +20,7 @@
         name="2.2.1"
         description="April 1st, 2017">
         <text>Smooth out the animations</text>
+        <text>Preparations for Android O</text>
         <text>Bug fixes</text>
     </version>
 
