--- a/shared/src/main/res/layout/message_received_round.xml
+++ b/shared/src/main/res/layout/message_received_round.xml
@@ -42,6 +42,7 @@
             android:minWidth="@dimen/min_mms_picture_width"
             android:scaleType="centerInside"
             android:id="@+id/image"
+            android:transitionName="image"
             android:padding="3dp"
             android:contentDescription="@string/mms_image" />
 
