--- a/shared/src/main/res/layout/message_sending.xml
+++ b/shared/src/main/res/layout/message_sending.xml
@@ -45,6 +45,7 @@
             android:maxHeight="@dimen/max_message_width"
             android:scaleType="centerInside"
             android:id="@+id/image"
+            android:transitionName="image"
             android:layout_marginBottom="6dp"
             android:layout_marginStart="2dp"
             android:contentDescription="@string/mms_image" />
