--- a/shared/src/main/res/layout/message_sent_round.xml
+++ b/shared/src/main/res/layout/message_sent_round.xml
@@ -44,6 +44,7 @@
             android:maxHeight="@dimen/max_message_width"
             android:scaleType="centerInside"
             android:id="@+id/image"
+            android:transitionName="image"
             android:padding="3dp"
             android:contentDescription="@string/mms_image" />
 
