--- a/shared/src/main/res/values/styles.xml
+++ b/shared/src/main/res/values/styles.xml
@@ -33,6 +33,9 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:actionOverflowButtonStyle">@style/Overflow</item>
+
+        <item name="android:windowActivityTransitions">true</item>
+        <item name="android:windowSharedElementExitTransition">@transition/transition_change_image</item>
     </style>
 
     <style name="PulseTheme" parent="@style/Theme.AppCompat.DayNight.DarkActionBar">
@@ -67,6 +70,9 @@
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowBackground">@android:color/black</item>
         <item name="android:actionOverflowButtonStyle">@style/Overflow</item>
+
+        <item name="android:windowActivityTransitions">true</item>
+        <item name="android:windowSharedElementEnterTransition">@transition/transition_change_image</item>
     </style>
 
     <style name="AppIntro" parent="Theme.AppCompat.Light.NoActionBar">
