--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="2.2.4"
+        description="April 17th, 2017">
+        <text>Bug fixes and performance improvements</text>
+    </version>
+
+    <version
         name="2.2.3"
         description="April 11th, 2017">
         <text>Rework the option to refresh the push notifications</text>
