--- a/shared/src/main/res/values-release/bools.xml
+++ b/shared/src/main/res/values-release/bools.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (C) 2016 Jacob Klinker
+  ~ Copyright (C) 2017 Jacob Klinker
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -16,11 +16,5 @@
   -->
 
 <resources>
-
-    <bool name="is_tablet">false</bool>
-    <bool name="pin_drawer">false</bool>
-    <bool name="is_night">false</bool>
-    <bool name="feature_flag_default">true</bool>
-    <bool name="check_subscription">false</bool>
-
+    <bool name="check_subscription">true</bool>
 </resources>
