default swipe to delete to off

--- a/shared/src/main/res/xml/settings_global.xml
+++ b/shared/src/main/res/xml/settings_global.xml
@@ -55,7 +55,7 @@
         <SwitchPreference
             android:key="@string/pref_swipe_delete"
             android:title="@string/swipe_delete"
-            android:defaultValue="true" />
+            android:defaultValue="false" />
 
     </PreferenceCategory>
 
